--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="My Name Is Nasikh Mahamood C L. I'm a React developer based in Kerala, India. curious to learn more about both frontend and backend technologies. Currently working as a part-time intern as a web development teaching assistant. solved 600+ student doubts, assisting them with projects and other assignments with an average rating of 4.87/5. If I'm not coding, you can find me at the badminton court." />
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
