--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
 
     <link rel='canonical' href='https://nasikhcl.me' />
-    <link rel='canonical' href='https://nasikhcl.netlify.app' />
+    <!-- <link rel='canonical' href='https://nasikhcl.netlify.app' /> -->
 
     <link rel="stylesheet" href="style.css">
     <!--
